Fixed body page on mobile Upcoming events working now

--- a/frontend/src/components/Club/Featured/Featured.scss
+++ b/frontend/src/components/Club/Featured/Featured.scss
@@ -20,14 +20,11 @@
         padding: 20px;
         margin-right:50px;
         height: 100%;
+        padding-top: 0.5px;
 
         h3 {
             margin: 0;
             margin-top: 20px;
-
-            &:first-of-type {
-                margin-top: 0;
-            }
         }
 
         p {
