--- a/frontend/src/components/Club/Meeting/Meetings.scss
+++ b/frontend/src/components/Club/Meeting/Meetings.scss
@@ -6,10 +6,12 @@
         .meet-basics {
             flex-grow: 1;
             min-width: 300px;
+            margin-bottom: 40px;
         }
         .meet-details {
             margin-left: 50px;
             min-width: 300px;
+            width: 100%;
         }
         h2 {
             margin-top: 0;
